# SevenSegmentDisplay

./: .gitignore  CMakeLists.txt  README.md  TODO  astylerc
cmake/Modules/: Melpers.cmake
doc/: Doxyfile  Makefile
src/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  displaynode_p.hpp  qml.qrc  sevensegmentdisplay.cpp  sevensegmentdisplay.hpp
src/gui/qml/: ColorChooser.qml  TimerControl.qml  main.qml
